--- a/src/webui/css/main.css
+++ b/src/webui/css/main.css
@@ -6544,6 +6544,53 @@ body[dir="ltr"] .settings-buttons .reset-settings {
 body[dir="rtl"] .settings-buttons .reset-settings {
   float: left;
 }
+.draw-attention:after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  border-radius: 100%;
+  width: 125%;
+  height: 125%;
+  border: 10000px solid black;
+  z-index: 9999;
+  opacity: 0.65;
+}
+.draw-attention {
+  animation: waggle 1s 0s forwards ease-out;
+  z-index: 1;
+}
+@keyframes waggle {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: rotateZ(-20deg) scale(1.2);
+  }
+  60% {
+    transform: rotateZ(25deg) scale(1.2);
+  }
+  67.5% {
+    transform: rotateZ(-15deg) scale(1.2);
+  }
+  75% {
+    transform: rotateZ(15deg) scale(1.2);
+  }
+  82.5% {
+    transform: rotateZ(-12deg) scale(1.2);
+  }
+  85% {
+    transform: rotateZ(0) scale(1.2);
+  }
+  100% {
+    transform: rotateZ(0) scale(1);
+  }
+}
 #settings-accordion {
   position: absolute;
   top: 38px;
